applications/proxy/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer-proxy
spec:
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 8225
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homer-proxy
subsets:
- addresses:
  - ip: 192.168.178.82
  ports:
  - name: app
    port: 8225
    protocol: TCP
